# cursor_chat

./: Cargo.toml  README.md  project_suggestions.md
src/: index.html  main.rs
src/handlers/: http.rs  mod.rs  websocket.rs
src/models/: message.rs  mod.rs  request.rs
src/utils/: mod.rs
