[package]
name = "cursor_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["json", "ws", "macros"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"